feat: 인기 장소 조회를 목데이터 → 실데이터로 전환